--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/nodemailer": "^6.4.17"
   },
   "dependencies": {
+    "chalk": "^5.4.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
